Archive2/b1/97e7b0efb077ac/output
main.cpp:9:41: error: no type named 'bar' in 'std::common_type<ChildA &, ChildB &>'
    std::common_type<ChildA&, ChildB&>::bar foo = 100;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
1 error generated.
